[package]
name = "switch-env"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
colored = "2"
git2 = "0.14"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
